allow for adding sets
